force-app/main/default/objects/FEC_API_Config__mdt/FEC_API_Config__mdt.object-meta.xml
<CustomObject>
    <label>FEC API Config</label>
    <pluralLabel>FEC API Configs</pluralLabel>
</CustomObject>