force-app/main/default/objects/FEC_API_Config__mdt/fields/FEC_API_Key__c.field-meta.xml
<CustomField>
    <fullName>FEC_API_Key__c</fullName>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>