force-app/main/default/objects/FEC_API_Config__mdt/fields/FEC_Disb_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Disb_Channel__c</fullName>
    <label>Disb Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>