force-app/main/default/objects/FEC_API_Config__mdt/fields/FEC_FromDate_Hard_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_FromDate_Hard_Code__c</fullName>
    <label>FromDate Hard Code</label>
    <type>Date</type>
</CustomField>