force-app/main/default/objects/FEC_API_Config__mdt/fields/FEC_Last_4_Digit_Hard_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Last_4_Digit_Hard_Code__c</fullName>
    <label>Last 4 Digit Hard Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>