force-app/main/default/objects/FEC_API_Config__mdt/fields/FEC_Mobile_Hard_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Mobile_Hard_Code__c</fullName>
    <label>Mobile Hard Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>