force-app/main/default/objects/FEC_API_Config__mdt/fields/FEC_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>FEC_Named_Credential__c</fullName>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>