force-app/main/default/objects/FEC_API_Config__mdt/fields/FEC_National_Id_Hard_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_National_Id_Hard_Code__c</fullName>
    <label>National Id Hard Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>