force-app/main/default/objects/FEC_API_Config__mdt/fields/FEC_Requestor_Id__c.field-meta.xml
<CustomField>
    <fullName>FEC_Requestor_Id__c</fullName>
    <label>Requestor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>