force-app/main/default/objects/FEC_API_Config__mdt/fields/FEC_SOAP_Action__c.field-meta.xml
<CustomField>
    <fullName>FEC_SOAP_Action__c</fullName>
    <label>SOAP Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>