force-app/main/default/objects/FEC_API_Config__mdt/fields/FEC_ToDate_Hard_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_ToDate_Hard_Code__c</fullName>
    <label>ToDate Hard Code</label>
    <type>Date</type>
</CustomField>