force-app/main/default/objects/FEC_API_Config__mdt/fields/FEC_Use_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>FEC_Use_Named_Credential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Named Credential</label>
    <type>Checkbox</type>
</CustomField>